--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Hero Section -->
   <section   class="relative bg-cover bg-center bg-no-repeat py-32 text-white"
-  style="background-image: linear-gradient(rgba(0, 80, 0, 0.6), rgba(0, 80, 0, 0.6)), url('image/Rabbit.jpg');"
+  style="background-image: linear-gradient(rgba(0, 80, 0, 0.6), rgba(0, 80, 0, 0.6)), url('image/rabbit.jpg');"
 >
     <div class="container mx-auto text-center px-4">
     <h2 class="text-4xl font-bold mb-4">Pure Rabbit Urine Fertilizer</h2>
