--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container mx-auto max-w-2xl text-center">
       <h3 class="text-2xl font-bold mb-4">Place Your Order</h3>
       <p class="mb-6 text-lg">Contact us for pricing, bulk orders, or farm demos.</p>
-      <form action="https://formspree.io/f/your_form_id" method="POST" class="grid gap-4 text-left">
+      <form action="https://formspree.io/f/xovljbwd" method="POST" class="grid gap-4 text-left">
         <input type="text" name="name" placeholder="Your Name" required class="p-3 rounded border border-gray-300 w-full" />
         <input type="email" name="email" placeholder="Your Email" required class="p-3 rounded border border-gray-300 w-full" />
         <textarea name="message" placeholder="Your Message or Order" rows="4" required class="p-3 rounded border border-gray-300 w-full"></textarea>
